kubernetes/apps/k10/rclone/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: rclone
  name: rclone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rclone
  template:
    metadata:
      labels:
        app: rclone
    spec:
      containers:
      - name: rclone
        image: rclone/rclone:1.66.0
        command:
        - "sleep"
        - "infinity"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5572
            name: web
        volumeMounts:
        - name: config
          mountPath: /config
        - name: live-config
          mountPath: /live-config
        - mountPath: /data/backups
          name: backups
      volumes:
      - name: live-config
        emptyDir: {}
      - name: config
        secret:
          secretName: rclone-config
      - name: backups
        persistentVolumeClaim:
          claimName: backup-offloading
