kubernetes/apps/k10/rclone/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rclone
  name: rclone
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: rclone
  type: ClusterIP
