kubernetes/apps/k10/rclone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rclone
            port:
              name: http
    host: rclone.{ MY_DOMAIN }
  tls:
  - hosts:
    - rclone.{ MY_DOMAIN }
    secretName: rclone.{ MY_DOMAIN }-cert
